kubernetes_labs/nginx-with-config-file.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-config-file
spec:
  containers:
    - name: nginx
      image: nginx:1.25-alpine
      volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/
  volumes:
    - name: config-volume
      configMap:
        name: app-config-file
