kubernetes_labs/nginx-with-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-with-config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-with-config
  template:
    metadata:
      labels:
        app: nginx-with-config
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
